--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "configbot": "node configure.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/material": "^5.15.10",
     "@orbs-network/ton-access": "^2.2.2",
     "@tanstack/react-query": "^4.24.4",
-    "@tonconnect/ui-react": "^2.0.0-beta.2",
+    "@ton/core": "^0.55.0",
+    "@ton/crypto": "^3.2.0",
+    "@ton/ton": "^13.10.0",
+    "@tonconnect/ui-react": "^2.0.0",
     "@twa-dev/sdk": "^6.4.2",
     "buffer": "^6.0.3",
     "is-mobile": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.6",
-    "ton": "13.3.0",
-    "ton-core": "^0.46.0",
-    "ton-crypto": "^3.2.0",
     "use-local-storage": "^2.3.6",
     "vite-plugin-node-polyfills": "^0.7.0"
   },
